# tess_dv_fast

./: .gitignore  CHANGES.rst  LICENSE  README.md  pyproject.toml  requirements.txt  tess_dv_fast.py  tess_dv_fast_build.py  tess_dv_fast_common.py  tess_dv_fast_spec.py  tess_dv_fast_webapp.py  tess_spoc_dv_fast.py  tess_spoc_dv_fast_build.py  tess_spoc_dv_fast_spec.py
.github/: dependabot.yml
src/go/: .dockerignore  Dockerfile  PORT_SUMMARY.md  README.md  go.mod  main.go
src/go/pkg/common/: common.go
src/go/pkg/query/: query.go
src/go/pkg/spec/: spec.go
src/python/tess_dv_fast/: __init__.py  tcestats_utils.py  tess_dv_fast.py  tess_dv_fast_build.py  tess_dv_fast_spec.py  tess_dv_fast_webapp.py  tess_spoc_dv_fast.py  tess_spoc_dv_fast_build.py  tess_spoc_dv_fast_spec.py  version.py
src/python/tess_dv_fast_webapp_gcloud/: README.md  assemble.sh
src/python_gcloud/: README.md  assemble.sh  main.py  requirements.txt
tess_dv_fast_webapp_gcloud/: Dockerfile  README.md  assemble.sh  main.py  requirements.txt
test/: E2E_TEST_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  TEST_E2E_SANITY_README.md  TEST_README.md  TEST_SUITE_FILES.md  TEST_SUITE_INDEX.md  run_test_setup.sh  test_e2e_sanity.sh
tests/: test_build_query.py  test_data_dir.py
tests/data/tess_dv_fast/: README.md  tess2018206190142-s0001-s0001_dvr-tcestats.csv  tess2018206190142-s0001-s0009_dvr-tcestats.csv  tess2018206190142-s0001-s0096_dvr-tcestats.csv  tess2025206194924-s0095-s0095_dvr-tcestats.csv  tesscurl_multisector_s0001-s0009_dv.sh  tesscurl_multisector_s0001-s0096_dv.sh  tesscurl_sector_1_dv.sh  tesscurl_sector_95_dv.sh
