[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tess-dv-fast"
dynamic = ["version"]
description = "Fast lookup of TESS SPOC and TESS-SPOC TCEs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "requests>=2.34.2",
]

[project.optional-dependencies]
webapp = [
  "Flask>=3.0",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.dynamic]
version = {attr = "tess_dv_fast.version.__version__"}

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.packages.find]
where = ["src/python"]
