[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tess-dv-fast"
dynamic = ["version"]
description = "Fast lookup of TESS mission SPOC and TESS-SPOC TCE Data Validation (DV) reports"
authors=[{name="Sam Lee", email="orionlee@yahoo.comm"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["NASA", "TESS", "Astronomy", "exoplanets"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.8"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
build_db = [
  "requests>=2.0",
  "scipy",
]
webapp = [
  "Flask>=3.0",
]
dev = [
  "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/orionlee/tess_dv_fast/"
Issues = "https://github.com/orionlee/tess_dv_fast/issues"

[tool.setuptools.dynamic]
version = {attr = "tess_dv_fast.version.__version__"}

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.packages.find]
where = ["src/python"]
